Improved readability and API using