@@ -5,7 +5,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
-import mc.rellox.spawnermeta.utility.adapter.Platform;
+import io.github.rvskele.paperlib.PaperLib;
 import org.bukkit.Material;
 import org.bukkit.NamespacedKey;
 import org.bukkit.block.Block;
@@ -84,11 +84,12 @@ public final class DataManager {
 
 	public static ItemStack getSpawner(IVirtual spawner, int a) {
 		return getSpawners(spawner.getType(), spawner.getUpgradeLevels(), spawner.getCharges(), spawner.getSpawnable(),
-				a, spawner.isEmpty(), true).get(0);
+				a, spawner.isEmpty(), true).getFirst();
 	}
 
 	public static ItemStack getSpawner(SpawnerType type, int amount) {
-		return getSpawners(type, i(), 0, Settings.settings.spawnable_amount.get(type), amount, false, true).get(0);
+		return getSpawners(type, i(), 0, Settings.settings.spawnable_amount.get(type),
+				amount, false, true).getFirst();
 	}
 	
 	public static List<ItemStack> getSpawners(Block block, boolean ignore) {
@@ -108,13 +109,13 @@ public final class DataManager {
 	}
 
 	/**
-	 * @param type - spawner type
-	 * @param levels - range, delay and amount
-	 * @param charges - charges
-	 * @param spawnable - spawnable amount
-	 * @param amount - amount
-	 * @param empty - is empty
-	 * @param ignore - ignore spawnable amount splitting
+	 * @param type spawner type
+	 * @param levels range, delay and amount
+	 * @param charges charges
+	 * @param spawnable spawnable amount
+	 * @param amount amount
+	 * @param empty is empty
+	 * @param ignore ignore spawnable amount splitting
 	 * @return List of items, can be empty
 	 */
 	
@@ -122,11 +123,11 @@ public final class DataManager {
 			boolean empty, boolean ignore) {
 		List<ItemStack> list = new ArrayList<>();
 		if(type == null) type = SpawnerType.PIG;
-		if(empty == true && Settings.settings.empty_store_inside == false) type = SpawnerType.EMPTY;
-		if(Settings.settings.spawnable_enabled == true) {
+		if(empty && !Settings.settings.empty_store_inside) type = SpawnerType.EMPTY;
+		if(Settings.settings.spawnable_enabled) {
 			if(spawnable <= 0 || amount <= 0) return list;
 			if(amount > 1) {
-				if(ignore == true) {
+				if(ignore) {
 					list.addAll(getSpawner(type, levels, charges, spawnable, amount, empty));
 					return list;
 				}
@@ -148,13 +149,13 @@ public final class DataManager {
 		ItemStack item = new ItemStack(Material.SPAWNER, 1);
 		ItemMeta meta = item.getItemMeta();
 		List<Content> name;
-		if(empty == true) {
-			if(Settings.settings.empty_store_inside == true && type != SpawnerType.EMPTY)
+		if(empty) {
+			if(Settings.settings.empty_store_inside && type != SpawnerType.EMPTY)
 				name = Language.list("Spawner-item.empty-stored.name", "type", type);
 			else name = Language.list("Spawner-item.empty.name");
 		} else name = Language.list("Spawner-item.regular.name", "type", type);
 
-		if(name.size() > 0) meta.setDisplayName(name.remove(0).text());
+		if(!name.isEmpty()) meta.setDisplayName(name.removeFirst().text());
 		
 		IOrder order = LayoutRegistry.order_spawner.oderer();
 		
@@ -163,12 +164,12 @@ public final class DataManager {
 		order.submit("RANGE", () -> Language.list("Spawner-item.upgrade.range", "level", Utility.roman(levels[0])));
 		order.submit("DELAY", () -> Language.list("Spawner-item.upgrade.delay", "level", Utility.roman(levels[1])));
 		order.submit("AMOUNT", () -> Language.list("Spawner-item.upgrade.amount", "level", Utility.roman(levels[2])));
-		if(Settings.settings.charges_enabled == true) {
+		if(Settings.settings.charges_enabled) {
 			boolean inf = charges >= 1_000_000_000;
 			order.submit("CHARGES", () -> Language.list("Spawner-item.charges",
 					"charges", inf ? Text.infinity : charges));
 		}
-		if(Settings.settings.spawnable_enabled == true) {
+		if(Settings.settings.spawnable_enabled) {
 			order.submit("SPAWNABLE", () -> Language.list("Spawner-item.spawnable", "spawnable", spawnable));
 		}
 		
@@ -183,7 +184,7 @@ public final class DataManager {
 		List<ItemStack> list = new ArrayList<>(amount + 63 >> 6);
 		while(amount > 0) {
 			ItemStack clone = item.clone();
-			clone.setAmount(amount >= 64 ? 64 : amount);
+			clone.setAmount(Math.min(amount, 64));
 			list.add(clone);
 			amount -= 64;
 		}
@@ -191,20 +192,20 @@ public final class DataManager {
 	}
 	
 	public static List<ItemStack> getSpawner(SpawnerType type, String values, int amount, boolean empty) {
-		if(values == null || values.isEmpty() == true) return List.of();
+		if(values == null || values.isEmpty()) return List.of();
 		String[] vs = values.split("[,;:]");
 		if(vs.length < 5) {
 			var os = vs;
 			vs = new String[] {"-", "-", "-", "-", "-"};
-			for(int i = 0; i < os.length; i++) vs[i] = os[i];
+            System.arraycopy(os, 0, vs, 0, os.length);
 		}
 		int[] is = new int[5];
 		int i = 0;
 		for(; i < 5; i++) {
-			if(i > 2 && vs[i].equals("inf") == true
-					|| vs[i].equals("infinite") == true) is[i] = 1_500_000_000;
-			else if(vs[i].equals("-") == true) is[i] = 0;
-			else if(Utility.isInteger(vs[i]) == true) is[i] = Integer.parseInt(vs[i]);
+			if(i > 2 && vs[i].equals("inf")
+					|| vs[i].equals("infinite")) is[i] = 1_500_000_000;
+			else if(vs[i].equals("-")) is[i] = 0;
+			else if(Utility.isInteger(vs[i])) is[i] = Integer.parseInt(vs[i]);
 			else return List.of();
 		}
 		int[] ls = Settings.settings.upgrades_levels.get(type);
@@ -227,10 +228,10 @@ public final class DataManager {
 		if(cs == null) return;
 		EntityType entity = cs.getSpawnedType();
 		SpawnerType type;
-		if(empty == true) type = SpawnerType.EMPTY;
+		if(empty) type = SpawnerType.EMPTY;
 		else {
 			if(entity == null) {
-				if(Settings.settings.empty_enabled == true) {
+				if(Settings.settings.empty_enabled) {
 					type = SpawnerType.EMPTY;
 					empty = true;
 				} else type = SpawnerType.PIG;
@@ -253,7 +254,7 @@ public final class DataManager {
 		setOneCount(block);
 		setType(block, type);
 		setEnabled(block, true);
-		if(empty == true) setEmpty(block);
+		if(empty) setEmpty(block);
 		setCharges(block, charges);
 	}
 	
@@ -286,20 +287,20 @@ public final class DataManager {
 	}
 	
 	public static void validateEmpty(Block block) {
-		if(Settings.settings.reset_spawner_values == false) return;
+		if(!Settings.settings.reset_spawner_values) return;
 		CreatureSpawner cs = cast(block);
 		if(cs == null) return;
 		EntityType type = cs.getSpawnedType();
 		if(type != null) return;
 		boolean empty = isEmpty(block);
-		if(empty == false) return;
+		if(!empty) return;
 		cs.setSpawnedType(SpawnerType.EMPTY.entity());
 		cs.update();
 	}
 	
 	public static boolean cancelledByOwner(Block block, Player player) {
 		UUID owner = getOwner(block);
-		return owner != null && player.getUniqueId().equals(owner) == false;
+		return owner != null && !player.getUniqueId().equals(owner);
 	}
 	
 	private static int[] attributes(Block block, SpawnerType type, int[] l) {
@@ -313,11 +314,11 @@ public final class DataManager {
 		return r;
 	}
 
-	protected static void updateType(Block block) {
+	private static void updateType(Block block) {
 		updateType(block, null);
 	}
 
-	protected static void updateType(Block block, SpawnerType type) {
+	private static void updateType(Block block, SpawnerType type) {
 		CreatureSpawner cs = cast(block);
 		if(cs == null) return;
 		cs.setSpawnedType((type == null ? getType(block) : type).entity());
@@ -332,7 +333,7 @@ public final class DataManager {
 		p.set(key_upgrades, PersistentDataType.INTEGER_ARRAY, Arrays.copyOf(levels, 3));
 		p.set(key_charges, PersistentDataType.INTEGER, charges);
 		p.set(key_spawnable, PersistentDataType.INTEGER, spawnable);
-		if(empty == true) p.set(key_empty, PersistentDataType.INTEGER, 1);
+		if(empty) p.set(key_empty, PersistentDataType.INTEGER, 1);
 		item.setItemMeta(meta);
 	}
 
@@ -345,7 +346,7 @@ public final class DataManager {
 		ItemMeta meta = item.getItemMeta();
 		PersistentDataContainer p = meta.getPersistentDataContainer();
 		SpawnerType type;
-		if(p.has(key_type, PersistentDataType.STRING) == true) {
+		if(p.has(key_type, PersistentDataType.STRING)) {
 			type = SpawnerType.of(p.get(key_type, PersistentDataType.STRING));
 		} else if(meta instanceof BlockStateMeta bsm) {
 			if(bsm.getBlockState() instanceof CreatureSpawner cs) {
@@ -354,10 +355,10 @@ public final class DataManager {
 		} else type = nullable ? null : SpawnerType.PIG;
 		boolean empty = p.getOrDefault(key_empty, PersistentDataType.INTEGER, 0) >= 1;
 		if(type == null) {
-			if(Settings.settings.empty_enabled == true) {
+			if(Settings.settings.empty_enabled) {
 				type = SpawnerType.EMPTY;
 				empty = true;
-			} else if(nullable == false) type = SpawnerType.PIG;
+			} else if(!nullable) type = SpawnerType.PIG;
 			else return null;
 		}
 		int[] levels = p.getOrDefault(key_upgrades, PersistentDataType.INTEGER_ARRAY, i());
@@ -432,7 +433,7 @@ public final class DataManager {
 	public static boolean isItemSpawner(Block block) {
 		CreatureSpawner cs = cast(block);
 		if(cs == null) return false;
-		return Utility.isItem(cs.getSpawnedType()) == true;
+		return Utility.isItem(cs.getSpawnedType());
 	}
 
 	public static void setType(Block block, SpawnerType type) {
@@ -455,7 +456,7 @@ public final class DataManager {
 		CreatureSpawner cs = cast(block);
 		if(cs == null) return true;
 		String st = cs.getPersistentDataContainer().get(key_type, PersistentDataType.STRING);
-		if(st == null || st.equalsIgnoreCase("EMPTY") == true) return true;
+		if(st == null || st.equalsIgnoreCase("EMPTY")) return true;
 		return cs.getSpawnedType() == EntityType.AREA_EFFECT_CLOUD;
 	}
 
@@ -499,9 +500,8 @@ public final class DataManager {
 		String id = cs.getPersistentDataContainer().get(key_owner, PersistentDataType.STRING);
 		if(id == null) return null;
 		try {
-			UUID uuid = UUID.fromString(id);
-			return uuid;
-		} catch (Exception e) {}
+            return UUID.fromString(id);
+		} catch (Exception ignored) {}
 		return null;
 	}
 
@@ -541,13 +541,13 @@ public final class DataManager {
 	
 	public static boolean isRotating(Block block) {
 		CreatureSpawner cs = cast(block);
-		return cs == null ? false : cs.getRequiredPlayerRange() > 0;
+		return cs != null && cs.getRequiredPlayerRange() > 0;
 	}
 	
-	public static void setRotating(Block block, boolean b) {
+	public static void setRotating(Block block, boolean rotating) {
 		CreatureSpawner cs = cast(block);
 		if(cs == null) return;
-		if(b == true) {
+		if(rotating) {
 			int[] is = getUpgradeAttributes(block);
 			cs.setRequiredPlayerRange(is[0]);
 		} else cs.setRequiredPlayerRange(0);
@@ -658,8 +658,8 @@ public final class DataManager {
 	
 	private static CreatureSpawner cast(Block block) {
 		try {
-			if(block.equals(last) == true) return spawner;
-			if(Platform.ADAPTER.getState(block) instanceof CreatureSpawner cs) {
+			if(block.equals(last)) return spawner;
+			if(PaperLib.getBlockState(block, false).getState() instanceof CreatureSpawner cs) {
 				last = block;
 				return spawner = cs;
 			}
